Closed Bug 1620830 Opened 5 years ago Closed 5 years ago

[Linux] Crash when running dmabuf textures with nvidia proprietrary drivers

Categories

(Core :: Widget: Gtk, defect, P3)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- disabled
firefox74 --- disabled
firefox75 --- disabled
firefox76 --- disabled
firefox79 --- disabled
firefox80 --- disabled
firefox81 --- disabled
firefox82 --- fixed

People

(Reporter: kubrick, Assigned: stransky)

References

(Blocks 1 open bug)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash Report [@ mozilla::layers::WaylandDMABUFTextureData::FillInfo ]
bp-7cce49aa-ad60-4b01-8d42-0ce3d0200308

Firefox works fine on EGL/Wayland but crashes on startup when enabling dmabuf textures.
5.5.8-arch1-1
nvidia 440.64-2
gnome/mutter 3.36.0

mSurface is null. We should now crash in this case.
Thanks.

I doubt proprietary Nvidia driver is used:

"compositor":"none", "gpuProcess":{"status":"blocked"}, "wrQualified":{"status":"denied"}, "webrender":{"status":"available"}
"driverVendor":"mesa/llvmpipe"
"gfx.webrender.all":true

Crash Signature: [@ mozilla::layers::WaylandDMABUFTextureData::FillInfo ]
Keywords: crash
OS: Unspecified → Linux
Hardware: Unspecified → x86_64
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression

It's double opt-in by env var plus pref: MOZ_ENABLE_WAYLAND=1 and widget.wayland-dmabuf-*.enabled.
WebRender is enabled by default only on Nightly and only for Mesa/Nouveau, not proprietary drivers.

Because this bug's Severity has not been changed from the default since it was filed, and it's Priority is P3 (Backlog,) indicating it has been triaged, the bug's Severity is being updated to S3 (normal.)

Severity: normal → S3

I've got a box with nvidia card so I can test that. nvidia proprietary drivers do not support GBM so we should just fail here.

Assignee: nobody → stransky

It affects X11 too.

Summary: [Wayland] Crash when running dmabuf textures with nvidia proprietrary drivers → [Linux] Crash when running dmabuf textures with nvidia proprietrary drivers
Pushed by cbrindusan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/eabc3a71bc7f [Linux] Don't create DMABUFTextureData when dmabuf surface creation fails, r=sotaro
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: