Bug 1620830 [Linux] Don't create DMABUFTextureData when dmabuf surface creation fails, r=sotaro

Differential Revision: https://phabricator.services.mozilla.com/D87876